--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,1 +1,4 @@
 set-option -g default-shell $SHELL
+
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
